--- a/src/main/webapp/css/my.css
+++ b/src/main/webapp/css/my.css
@@ -1,16 +1,21 @@
-.pagination a {
-    color: black;
-    float: left;
-    padding: 4px 8px;
-    text-decoration: none;
-    transition: background-color .3s;
-}
-/* set the style for the active class */
-.pagination a.active {
-    background-color: dodgerblue;
-    color: white;
-}
-/* add background color when user hovers on inactive class */
-.pagination a:hover:not(.active) {
-    background-color: #ddd;
+/*.pagination a {*/
+/*    color: black;*/
+/*    float: left;*/
+/*    padding: 4px 8px;*/
+/*    text-decoration: none;*/
+/*    transition: background-color .3s;*/
+/*}*/
+/*!* set the style for the active class *!*/
+/*.pagination a.active {*/
+/*    background-color: dodgerblue;*/
+/*    color: white;*/
+/*}*/
+/*!* add background color when user hovers on inactive class *!*/
+/*.pagination a:hover:not(.active) {*/
+/*    background-color: #ddd;*/
+/*}*/
+
+th, td {
+    border: 1px solid black;
+    padding: 3px;
 }
